--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
     <head>
 
         <meta type="description" content="Rob's Basic Bio">
-        <title>Basic Bio CSS</title>
+        <title>Basic Bio Page</title>
+        <link rel="stylesheet" href="C:\Users\rober\Desktop\Basic-Portfolio\assets\css\style_bio.css">
     </head>
+    
 
     <body>
-
+    <div class="name">
         <h1>Roberto Castanon</h1>
-        <h1>About Me</h1>
-        <img src="assets/images/cat_scared.jpg" alt="cat">
-        <p>Lorem ipsum dolor sit amet, consectetur dipiscing elit. Etiam sed lorem non metus fermentum egestas. Nam ac malesuada est, id sodales eros. Integer mollis finibus erat, vitae consectetur nunc venenatis id. Nam lobortis sem diam, eu fringilla elit dapibus quis. Donec ut turpis eget est fermentum rhoncus quis in eros. Proin et risus non augue tincidunt vehicula. Fusce diam nisi, blandit at laoreet in, vestibulum sit amet augue. Fusce fringilla bibendum ex, nec venenatis nibh sollicitudin in. Donec a risus a justo lacinia accumsan. Duis volutpat eleifend leo sit amet elementum.</p>
+    </div>
 
+    <div class="bar">
+        <ul>
+                <li><a href="#about"></a>About</li>
+                <li><a href="#portfolio"></a>Portfolio</li>
+                <li><a href="#contact"></a>Contact</li>
+            </ul>
+        </div>
+
+        <div class="about_me">
+            <h2>About Me</h2>
+        </div>
+    <div class="image">
+        <img src="assets/images/cat_scared.jpg" alt="cat">
+    </div>
+
+    <div class="text">
+        <p>Lorem ipsum dolor sit amet, consectetur dipiscing elit. Etiam sed lorem non metus fermentum egestas. Nam ac malesuada est, id sodales eros. Integer mollis finibus erat, vitae consectetur nunc venenatis id. Nam lobortis sem diam, eu fringilla elit dapibus quis. Donec ut turpis eget est fermentum rhoncus quis in eros. Proin et risus non augue tincidunt vehicula. Fusce diam nisi, blandit at laoreet in, vestibulum sit amet augue. Fusce fringilla bibendum ex, nec venenatis nibh sollicitudin in. Donec a risus a justo lacinia accumsan. Duis volutpat eleifend leo sit amet elementum.</p>
+    </div>
     </body>
 
 
