properly linked the css to the html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta type="description" content="Rob's Basic Bio">
         <title>Basic Bio Page</title>
-        <link rel="stylesheet" href="C:\Users\rober\Desktop\Basic-Portfolio\assets\css\style_bio.css">
+        <link rel="stylesheet" href="assets/css/style_bio.css">
     </head>
     
 
