Improvements to the css

--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
     
 
     <body>
-    <div class="name">
-        <h1>Roberto Castanon</h1>
-    </div>
+            <header>
+                        <h1>Roberto Castanon</h1>
 
-    <div class="bar">
-        <ul>
-                <li><a href="#about"></a>About</li>
-                <li><a href="#portfolio"></a>Portfolio</li>
-                <li><a href="#contact"></a>Contact</li>
-            </ul>
-        </div>
+                
+                    <div class="bar">
+                        <p>About | Portfolio | Contact</p>
+                        </div>
+                    </header>
+       <br> 
 
-        <div class="about_me">
-            <h2>About Me</h2>
-        </div>
-    <div class="image">
-        <img src="assets/images/cat_scared.jpg" alt="cat">
-    </div>
 
     <div class="text">
-        <p>Lorem ipsum dolor sit amet, consectetur dipiscing elit. Etiam sed lorem non metus fermentum egestas. Nam ac malesuada est, id sodales eros. Integer mollis finibus erat, vitae consectetur nunc venenatis id. Nam lobortis sem diam, eu fringilla elit dapibus quis. Donec ut turpis eget est fermentum rhoncus quis in eros. Proin et risus non augue tincidunt vehicula. Fusce diam nisi, blandit at laoreet in, vestibulum sit amet augue. Fusce fringilla bibendum ex, nec venenatis nibh sollicitudin in. Donec a risus a justo lacinia accumsan. Duis volutpat eleifend leo sit amet elementum.</p>
+        <p> <div class="about_me">
+                <h2>About Me</h2>
+            </div>
+            <img src="assets/images/cat_scared.jpg" alt="cat">
+
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis cursus odio nec molestie. Maecenas vehicula aliquet gravida. Nunc nisl justo, elementum vel faucibus ac, vulputate eu sapien. Aliquam tristique malesuada diam quis pellentesque. Mauris efficitur urna neque, nec lacinia ante cursus nec. Pellentesque sed lectus a tortor fermentum viverra vel a libero. Cras finibus tristique volutpat. Curabitur ut elit a dolor varius aliquet nec ut orci. Donec a lectus maximus, consequat erat non, porta tellus. Aenean a varius ex. Mauris gravida nibh neque, in pulvinar elit gravida vitae. Praesent venenatis tortor risus, vel luctus dui mollis viverra. Quisque sagittis ullamcorper elit, non sagittis quam sollicitudin sit amet. Vestibulum fringilla luctus accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consequat odio vel odio gravida, in vehicula mi aliquet. Nunc iaculis augue a porta pellentesque. Proin semper mauris ac libero bibendum mattis. Nulla auctor eget sem sed porta. Aliquam sit amet feugiat tortor. Donec convallis metus sed tellus fringilla, non vehicula sapien semper. Vivamus vel dolor consectetur dui gravida pellentesque. Sed quam ligula, interdum nec convallis vel, imperdiet eu massa.
+
+        </p>
     </div>
+    <br>
+    <footer>
+            <p>Copyright</p>
+        </footer>
+
     </body>
-
-
 </html>
