--- a/index.html
+++ b/index.html
@@ -26,14 +26,29 @@
             </div>
             <img src="assets/images/cat_scared.jpg" alt="cat">
 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis cursus odio nec molestie. Maecenas vehicula aliquet gravida. Nunc nisl justo, elementum vel faucibus ac, vulputate eu sapien. Aliquam tristique malesuada diam quis pellentesque. Mauris efficitur urna neque, nec lacinia ante cursus nec. Pellentesque sed lectus a tortor fermentum viverra vel a libero. Cras finibus tristique volutpat. Curabitur ut elit a dolor varius aliquet nec ut orci. Donec a lectus maximus, consequat erat non, porta tellus. Aenean a varius ex. Mauris gravida nibh neque, in pulvinar elit gravida vitae. Praesent venenatis tortor risus, vel luctus dui mollis viverra. Quisque sagittis ullamcorper elit, non sagittis quam sollicitudin sit amet. Vestibulum fringilla luctus accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consequat odio vel odio gravida, in vehicula mi aliquet. Nunc iaculis augue a porta pellentesque. Proin semper mauris ac libero bibendum mattis. Nulla auctor eget sem sed porta. Aliquam sit amet feugiat tortor. Donec convallis metus sed tellus fringilla, non vehicula sapien semper. Vivamus vel dolor consectetur dui gravida pellentesque. Sed quam ligula, interdum nec convallis vel, imperdiet eu massa.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis cursus odio nec molestie. 
+            Maecenas vehicula aliquet gravida. Nunc nisl justo, elementum vel faucibus ac, vulputate eu sapien. 
+            Aliquam tristique malesuada diam quis pellentesque. Mauris efficitur urna neque, nec lacinia ante cursus nec. 
+            Pellentesque sed lectus a tortor fermentum viverra vel a libero. Cras finibus tristique volutpat. 
+            Curabitur ut elit a dolor varius aliquet nec ut orci. Donec a lectus maximus, consequat erat non, porta tellus. 
+            Aenean a varius ex. Mauris gravida nibh neque, in pulvinar elit gravida vitae. 
+            Praesent venenatis tortor risus, vel luctus dui mollis viverra. Quisque sagittis ullamcorper elit, non sagittis quam sollicitudin sit amet. 
+            Vestibulum fringilla luctus accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Suspendisse consequat odio vel odio gravida, in vehicula mi aliquet. Nunc iaculis augue a porta pellentesque. 
+            Proin semper mauris ac libero bibendum mattis. Nulla auctor eget sem sed porta. Aliquam sit amet feugiat tortor. 
+            Donec convallis metus sed tellus fringilla, non vehicula sapien semper. Vivamus vel dolor consectetur dui gravida pellentesque. 
+            Sed quam ligula, interdum nec convallis vel, imperdiet eu massa.
 
         </p>
     </div>
     <br>
-    <footer>
+    <div class="content">
+        
+    </div>
+
+    <footer class="footer">
             <p>Copyright</p>
-        </footer>
+    </footer>
 
     </body>
 </html>
