--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
                 </div>
                 
                     <div class="bar">
-                        <p>About | Portfolio | Contact</p>
+                        <a href="index.html">About</a>
+                        <a href="portfolio.html">Portfolio</a>
+                        <a href="contact.html">Contact</a>
                     </div>
             </header>
        <br> 
