--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 
                     <div class="bar">
-                        <a href="index.html">About</a>
+                        <a href="index.html" target=>About</a>
                         <a href="portfolio.html">Portfolio</a>
                         <a href="contact.html">Contact</a>
                     </div>
