added link to trivia game

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-
-        <meta type="description" content="Rob's Basic Bio">
-        <title>Basic Bio Page</title>
-        <link rel="stylesheet" href="assets/css/style_bio.css">
-    </head>
-    
+<!doctype html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Roberto Castanon</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style_bio.css">
+</head>
 
     <body>
             <header>
