--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-
-        <meta type="description" content="Rob's Basic Bio">
-        <title>Basic Bio Page</title>
-        <link rel="stylesheet" href="assets/css/style_bio.css">
-    </head>
-    
+<!doctype html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | Roberto Castanon</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style_bio.css">
+</head>
 
     <body>
             <header>
@@ -31,8 +30,8 @@
                     
             </div>
 
-            <a target="_blank" href="town.jpg">
-              <img src="assets/images/town.jpg" alt="Cinque Terre" width="600" height="400">
+            <a target="_blank" href="https://robertocastanon.github.io/TriviaGame/">
+              <img src="assets/images/trivia.jpg" alt="Cinque Terre" width="600" height="400">
             </a>
             <div class="desc">Cinque Terre in Italy.</div>
           </div>
