--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
             </div>
 
             <a target="_blank" href="https://robertocastanon.github.io/TriviaGame/">
-              <img src="assets/images/trivia.jpg" alt="Cinque Terre" width="600" height="400">
+              <img src="assets/images/trivia.jpg" alt="Trivia Game" width="600" height="400">
             </a>
-            <div class="desc">Cinque Terre in Italy.</div>
+            <div class="desc">Link to Trivia Game!</div>
           </div>
           
           <div class="gallery">
