added giftastic site to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,10 @@
           </div>
           
           <div class="gallery">
-            <a target="_blank" href="forest.jpg">
-              <img src="assets/images/forest.jpg" alt="Forest" width="600" height="400">
+            <a target="_blank" href="https://robertocastanon.github.io/GifTastic/">
+              <img src="assets/images/gif.gif" alt="GifTastic" width="600" height="400">
             </a>
-            <div class="desc">Neat bridge leading to a forest.</div>
+            <div class="desc">Link to GifTastic!</div>
           </div>
           
           <div class="gallery">
