added link to train hw:

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,10 @@
           </div>
           
           <div class="gallery">
-            <a target="_blank" href="lights.jpg">
-              <img src="assets/images/lights.jpg" alt="Northern Lights" width="600" height="400">
+            <a target="_blank" href="https://robertocastanon.github.io/Train-Scheduler/">
+              <img src="assets/images/train.png" alt="Train-Scheduler" width="600" height="400">
             </a>
-            <div class="desc">Aurora borealis over snowy mountains</div>
+            <div class="desc">Link to Train-Scheduler!</div>
           </div>
           
           <div class="gallery">
